--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *.out
 Project 1/Proj1.exe
 Project 1/providedTests/*
+Project 1/runProvTestNum.bash
+Project 1/runProvTestNum.sh
+Project 1/runProvTestNum.sh
+Project 1/runAllPTests.sh
