Revert "Update .gitignore"
This reverts commit bd4d6aba9448ec4a18adf54e0689b3a52841d4fd.

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,4 @@
 Project 1/Proj1.exe
 Project 1/providedTests/*
 Project 1/runProvTestNum.bash
-Project 1/runProvTestNum.sh
-
+Project 1/runAllPTests.sh
