--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Project 1/Proj1.exe
 Project 1/providedTests/*
 Project 1/runProvTestNum.bash
 Project 1/runAllPTests.sh
+Project 1/generateSubmission.sh
