Instruction Support: 'lw', 'add', 'ori', and 'sw'
- Added 'lw', 'add', 'ori', and 'sw' instruction support. Does not yet support branching in any way.
- Output matching with the provided executable.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Project 1/providedTests/*
 Project 1/runProvTestNum.bash
 Project 1/runAllPTests.sh
 Project 1/generateSubmission.sh
+Project 2/Branching.exe
