--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Project 1/runProvTestNum.bash
 Project 1/runAllPTests.sh
 Project 1/generateSubmission.sh
 Project 2/Branching.exe
+Project 2/testGen.exe
