--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Project 1/runAllPTests.sh
 Project 1/generateSubmission.sh
 Project 2/Branching.exe
 Project 2/testGen.exe
+Project 2/proj2_sweatt.tar
